# IDKGraphics

./: CMakeLists.txt
IDKGE/resources/: brdf.lut  camera.idkvi  camera.txt  error.idkvi  unit-cone.idkvi  unit-cube.idkvi  unit-cube.txt  unit-cylinder-FF.idkvi  unit-line.idkvi  unit-sphere-FF.idkvi  unit-sphere.idkvi
IDKGE/resources/terrain/: clip0-lq.idkvi  clip0.idkvi  clip1-lq.idkvi  clip1.idkvi  grass-1.idkvi  grass-3D.idkvi  grass-4.idkvi  terrain-16x16.idkvi  terrain-1x1.idkvi  terrain-32x32.idkvi  terrain-64x64.idkvi  terrain-8x8.idkvi
IDKGE/shaders/: brdf-lut.comp  button-rect.fs  button-rect.vs  dirshadow-indirect.vs  dirshadow.fs  overlay-fill.comp  overlay-fill.fs  overlay.comp  overlay.fs  screenquad.fs  shadowcascade-split.comp  text.comp  ui-image.fs  ui-image.vs  ui-quad.fs  ui-quad.vs  ui-text.fs  ui-text.vs
IDKGE/shaders/GI/: GI.glsl  envprobe-background.vs  envprobe-cubemap.fs
IDKGE/shaders/GI/SVO/: octree.fs  octree.glsl
IDKGE/shaders/GI/envmap/: convolve-cubemap.fs  convolve-cubemap.vs  envprobe-background.fs  envprobe-cubemap.vs
IDKGE/shaders/UBOs/: UBOs.glsl
IDKGE/shaders/deferred/: atmosphere.fs  atmosphere.vs  background.comp  background.fs  background.vs  dirlight-atmospheric.fs  dirlight-volumetric.fs  dirlight.fs  dirlight.vs  fog-volume.fs  gbuffer-clear.comp  gp-vs-blit.fs  gpass-alpha-cutoff.fs  gpass-alpha-cutoff.vs  gpass-decal.fs  gpass-indirect.fs  gpass-indirect.vs  gpass-particle.fs  gpass-particle.vs  gpass-viewspace.fs  gpass-viewspace.vs  gpass.fs  gpass.vs  light-pass.fs  lpass.comp  lpass.fs  pointlight.fs  pointlight.vs  radiance.comp  radiance.fs  radiance.vs  spotlight.fs  spotlight.vs  volumetric_dirlight.fs
IDKGE/shaders/deferred/geometry-pass/: instanced.fs  terrain.fs  terrain.vs  wireframe.fs
IDKGE/shaders/generative/: planet-gen.comp  simplex.glsl  sobel.comp  voronoi.comp  worley.glsl
IDKGE/shaders/include/: SSBO_material.glsl  bindings.glsl  denoise.glsl  lightsource.glsl  pbr.glsl  storage.glsl  taa.glsl  util.glsl
IDKGE/shaders/particle/: particle-clear.comp  particle-gpass.fs  particle-gpass.vs  particle-update.comp  particle.glsl
IDKGE/shaders/post/: SSAO.fs  SSAO_composite.fs  SSR-downsample.comp  SSR-old.fs  SSR.comp  SSR.fs  SSS.fs  aa-fxaa.fs  aa-taa.fs  additive.fs  alpha-0-1.fs  blit-foliage.fs  blit-volumetrics.fs  blit-with-depth.fs  blit.fs  bloom-down.fs  bloom-first.fs  bloom-up.fs  c-abberation.fs  chromatic.comp  chromatic.fs  colorgrade.fs  composite.fs  crt.glsl  exposure-hist.comp  filter-gaussian.fs  filter-unsharp.fs  fxaa.fs  motion-blur.comp  post.comp
IDKGE/shaders/primitive/: prim-gpass.fs  prim-gpass.vs  prim.glsl
IDKGE/shaders/terrain/: clipmap-fs.glsl  clipmap-gpass.fs  clipmap-gpass.vs  clipmap-shadow.fs  clipmap-shadow.vs  clipmap-vs.glsl  grass-generate.comp  grass-gpass.fs  grass-gpass.vs  guassian-blur.comp  heightmap-generate.comp  heightmap-nmap.comp  terrain-generate.comp  terrain-gpass.fs  terrain-gpass.tesc  terrain-gpass.tese  terrain-gpass.vs  terrain-shadow.fs  terrain-shadow.tesc  terrain-shadow.tese  terrain-shadow.vs  terrain.glsl  version.glsl  water-displace.comp  water-gpass.fs  water-gpass.vs  water.glsl
IDKGE/shaders/vxgi/: bounce-1.comp  bounce-2.comp  clear.comp  copy.comp  inject-radiance.comp  mipmap-1.comp  mipmap-2.comp  mipmap-A.comp  mipmap-B.comp  mipmap.comp  propagate-radiance.comp  shadow.fs  shadow.vs  trace.fs  voxelize.fs  voxelize.vs  vxgi.fs  vxgi.glsl  vxgi.vs
docs/: README.md
src/IDKGraphics/: idk_model_manager.cpp  idk_model_manager.hpp  idk_noisegen.cpp  idk_noisegen.hpp  idk_overlay.cpp  idk_overlay.hpp  idk_render_settings.cpp  idk_render_settings.hpp  idk_render_settings_field.cpp  idk_render_settings_field.hpp  idk_render_stages.cpp  idk_renderengine.cpp  idk_renderengine.hpp  idk_rendernode.cpp  idk_rendernode.hpp  particle_system.hpp
src/IDKGraphics/UI/: idk_element2.cpp  idk_ui-ree.cpp  idk_ui-ree.hpp  idk_ui.cpp  idk_ui.hpp  idk_ui2.cpp  idk_ui2.hpp  idk_ui_render.cpp
src/IDKGraphics/animation/: idk_animation.hpp  idk_animation_file.cpp  idk_animation_file.hpp
src/IDKGraphics/batching/: idk_batch_allocator.cpp  idk_batch_allocator.hpp  idk_mesh_allocator.cpp  idk_mesh_allocator.hpp  idk_model.cpp  idk_model.hpp  idk_model_allocator.cpp  idk_model_allocator.hpp  idk_model_handle.hpp  idk_render_queue.cpp  idk_render_queue.hpp
src/IDKGraphics/camera/: idk_camera.cpp  idk_camera.hpp  idk_frustum.cpp  idk_frustum.hpp
src/IDKGraphics/decal/: decal.cpp  decal.hpp
src/IDKGraphics/env_probe/: env_probe.cpp  env_probe.hpp
src/IDKGraphics/irradiance_cache/: irradiance-average.comp  irradiance-cache.glsl  irradiance-inject.fs  irradiance_cache.cpp  irradiance_cache.hpp
src/IDKGraphics/lighting/: idk_lightsystem.cpp  idk_lightsystem.hpp  idk_shadowcascade.cpp  idk_shadowcascade.hpp
src/IDKGraphics/model/: idk_model.hpp  idk_vertex.hpp
src/IDKGraphics/node/: node.cpp  node.hpp
src/IDKGraphics/noise/: noise.cpp  noise.hpp
src/IDKGraphics/particle/: old.cpp  particle.cpp  particle.hpp  particle_system.cpp  particle_system.hpp
src/IDKGraphics/render/: cubemap.cpp  cubemap.hpp  idk_drawmethods.cpp  idk_drawmethods.hpp  idk_particle.hpp  idk_render_stages.cpp  idk_renderengine.hpp  idk_renderqueue.cpp  idk_renderqueue.hpp  idk_sdl_glew_init.cpp  idk_sdl_glew_init.hpp  idk_shadow.cpp  idk_vxgi.cpp  idk_vxgi.hpp  particle.cpp  particle.hpp
src/IDKGraphics/renderstage/: renderstage.hpp  ssr.cpp  ssr.hpp
src/IDKGraphics/storage/: bindings.hpp  buffers.cpp  buffers.hpp  idk_ssbo_indirect.hpp  idk_ubo_general.hpp  particle.hpp
src/IDKGraphics/terrain/: desc.hpp  grass.cpp  terrain.cpp  terrain.hpp  terrainstage.cpp  terrainstage.hpp
src/IDKGraphics/time/: time.cpp  time.hpp
src/IDKGraphics/volume/: volume.hpp
src/IDKRenderEngine/: idk_model_manager.cpp
src/IDKRenderEngine/animation/: idk_animation_file.hpp
src/IDKRenderEngine/model/: idk_model.hpp
src/IDKRenderEngine/render/: idk_drawmethods.cpp  idk_drawmethods.hpp  idk_renderengine.cpp  idk_renderengine.hpp  idk_renderqueue.hpp
(+4 files in other folders)
